--- a/index.html
+++ b/index.html
@@ -1439,7 +1439,7 @@
 
                 <td>
 
-                    <label>Sanke Gourd</label>
+                    <label>Snake Gourd</label>
 
                 </td>
 
