--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
             /*background-color: #eafae1;*/
         }
 
+        /* Target even rows (background-color can be changed) */
+        table.slyzecolor tr:nth-child(even) {
+            background-color: lightseagreen;
+        }
+
+        /* Target odd rows (background-color can be changed) */
+        table.slyzecolor tr:nth-child(odd) {
+            background-color: yellow;
+        }
+
         body {
             margin: 0;
             padding: 0;
@@ -83,6 +93,15 @@
 
         button {
             padding: 1px 2px;
+            background-color: #007BFF;
+            /* Blue button color */
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button.submit {
+            padding: 10px 20px;
             background-color: #007BFF;
             /* Blue button color */
             color: #fff;
@@ -148,7 +167,7 @@
             //Read Delivery Slot selected by User  
             const delcell = deltab.rows[0].cells[1];
             const delslot = delcell.childNodes[1].value;
-            userdetails += "\n" + "Your Delivery Slot: " + delslot + "\n";
+            userdetails += "\n" + "Delivery Slot: " + delslot + "\n";
             messagetext += userdetails + "\n";
             messagetext += "\n" + "Your order for today: " + "\n";
             orderdetails += "\n" + "Total Amount: " + total + "\n";
@@ -224,17 +243,17 @@
         <!-- <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext x='0' y='50' font-family='Verdana' font-size='35' fill='blue'%3ESlyze%3C/text%3E%3C/svg%3E" alt="Slyze Logo"> -->
     </header>
     <div class="container">
-        <table width ="100%">
+        <table width="100%">
             <tr>
-                <td ><img src="images/Logo Slyze.png" alt="Your Logo" width="40px"></td>
-                <td>
+                <td align="center"><img src="images/Logo Slyze.png" alt="Your Logo" width="40px"></td>
+                <td align="center">
                     <h3>Order Your Veggies</h3>
                 </td>
-                <td><img src="images/Text Slyze.png" alt="Your Logo" width="100px"></td>
+                <td align="center"><img src="images/Text Slyze.png" alt="Your Logo" width="100px"></td>
             </tr>
         </table>
         <!-- <p>Please enter your Name, phone number & Address. Select the vegetables, Required Quantity and Chopping Style: </p> -->
-        
+
         <form onsubmit="return false">
             <Table id="delslot">
                 <tr>
@@ -304,7 +323,7 @@
             </Table>
             <!-- <label>Vegetables:</label><br>
             <input type="checkbox" id="vegetable1" name="vegetable" value="Carrot"> -->
-            <Table id="veglist" border="1">
+            <Table id="veglist" border="1" class="slyzecolor">
                 <tr>
                     <td>Vegetable</td>
                     <td>Weight</td>
@@ -1002,7 +1021,7 @@
             </select><br> -->
             <!-- Add more vegetables as needed -->
             <br>
-            <button type="button" onclick="submitToWhatsApp()">Submit to WhatsApp</button>
+            <button class="submit" type="button" onclick="submitToWhatsApp()">Submit to WhatsApp</button>
         </form>
     </div>
 </body>
