--- a/index.html
+++ b/index.html
@@ -334,12 +334,12 @@ document.addEventListener("DOMContentLoaded", function() {
                                 <form>
                                     <div>
                                         <!-- <label for="flat">Flat/House Number</label> -->
-                                        <input required type="text" id="flat" name="flat" autocomplete="name"
+                                        <input type="text" id="flat" name="flat" autocomplete="name"
                                             enterkeyhint="next" placeholder="Please Enter Flat No.">
                                     </div>
                                     <div>
                                         <!-- <label for="flat">Flat/House Number</label> -->
-                                        <input required type="text" id="building" name="building" autocomplete="name"
+                                        <input type="text" id="building" name="building" autocomplete="name"
                                             enterkeyhint="next" placeholder="Please Enter Apartment/Building Name">
                                     </div>
                                     <div>
