--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ document.addEventListener("DOMContentLoaded", function() {
         <!-- <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext x='0' y='50' font-family='Verdana' font-size='35' fill='blue'%3ESlyze%3C/text%3E%3C/svg%3E" alt="Slyze Logo"> -->
     </header>
     <div class="container">
-        <table width="100%">
+        <table width="100%" border="1">
             <tr>
                 <td align="center"><img src="images/Logo Slyze.png" alt="Your Logo" width="40px"></td>
                 <td align="center">
@@ -294,7 +294,7 @@ document.addEventListener("DOMContentLoaded", function() {
         <!-- <p>Please enter your Name, phone number & Address. Select the vegetables, Required Quantity and Chopping Style: </p> -->
 
         <form onsubmit="return false">
-            <table id="delslot" class="user" width="100%">
+            <table id="delslot" class="user" width="100%" border="1">
                 <tr>
                     <td align="left">
                         <label id="slot"></label>
@@ -345,7 +345,7 @@ document.addEventListener("DOMContentLoaded", function() {
                                     <div>
                                         <!-- <label for="street-address">Street address</label> -->
                                         <input type="text" id="street-address" name="street-address"
-                                            autocomplete="street-address" required enterkeyhint="next"
+                                            autocomplete="street-address" enterkeyhint="next"
                                             placeholder="Please Enter Street"></input>
                                     </div>
                                     <div>
@@ -382,7 +382,7 @@ document.addEventListener("DOMContentLoaded", function() {
             </table>
             <!-- <label>Vegetables:</label><br>
             <input type="checkbox" id="vegetable1" name="vegetable" value="Carrot"> -->
-            <Table id="veglist" border="1" class="slyzecolor" table-layout="auto">
+            <Table id="veglist" border="1" class="slyzecolor" table-layout="auto" width="100%">
                <!-- Header Row    -->
                 <tr>
                     <td>Vegetable</td>
