--- a/index.html
+++ b/index.html
@@ -304,8 +304,9 @@ document.addEventListener("DOMContentLoaded", function() {
         <table width="100%" border="1">
             <tr>
                 <td align="center"><img src="images/Logo Slyze.png" alt="Your Logo" width="30px"></td>
-                <td align="center" class="title">
-                    <h3>Fresh Cut Veggies! Delivered Home</h3>
+                <td  align="center" class="title"> 
+                    <!-- <h6>Fresh Cut Veggies! Delivered Home</h6>  -->
+                    <label>Fresh Cut Veggies! Delivered Home</label>
                 </td>
                 <td align="center"><img src="images/Text Slyze.png" alt="Your Logo" width="70px"></td>
             </tr>
