--- a/index.html
+++ b/index.html
@@ -406,12 +406,12 @@ document.addEventListener("DOMContentLoaded", function() {
             <Table id="veglist" border="1" class="slyzecolor" table-layout="auto" width="100%">
                <!-- Header Row    -->
                 <tr>
-                    <td align="left">Vegetable</td>
-                    <td align="left">Weight(Gms.)</td>
-                    <td align="left">Price(Rs.)</td>
-                    <td>Quantity</td>
-                    <td>Style</td>
-                    <td>Cart</td>
+                    <td><label>Vegetable</label></td>
+                    <td><label>Weight(Gms.)</label></td>
+                    <td><label>Price(Rs.)</label></td>
+                    <td><label>Quantity  </label></td>
+                    <td><label>Style</label></td>
+                    <td><label>Cart</label></td>
                 </tr>
 
                 <!-- Tomato -->
