--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@ document.addEventListener("DOMContentLoaded", function() {
                     <td><label>Weight(Gms.)</label></td>
                     <td><label>Price(Rs.)</label></td>
                     <td><label>Quantity  </label></td>
-                    <td><label>Style</label></td>
+                    <td><label>Chopping Style</label></td>
                     <td><label>Cart</label></td>
                 </tr>
 
